# openfortivpn-tui

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: actions.rs  app.rs  config.rs  main.rs  runtime.rs  ui.rs  vpn.rs
src/app/: mod.rs  profile_form.rs  state.rs
src/ui/: mod.rs  popups.rs  screens.rs  theme.rs  views.rs  widgets.rs
